Support K8s 1.22/1.23 and update dependency versions (#2778)
* Support K8s 1.22/1.23 and update dependency versions

Co-authored-by: Sankar Periyathambi Neelakandan <45743425+sankarpn@users.noreply.github.com>
Co-authored-by: Anil Kedia <anil.kedia@oracle.com>